# logos

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .travis.yml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE-PROCESS.md  logos.spec  release.toml  test.sh
examples/: t.rs  (+13 more)
fuzz/: Cargo.toml
fuzz/in/: literal  regex
fuzz/src/: main.rs
logos/: Cargo.toml
logos-cli/: Cargo.toml
logos-cli/src/: main.rs
logos-cli/tests/: tests.rs
logos-cli/tests/data/: fmt_output.rs  input.rs  output.rs
logos-cli/tests/data/no_error_lut/: fmt_output.rs  output.rs
logos-cli/tests/snapshots/: tests__codegen.snap  tests__codegen_format.snap  tests__state_machine-fmt.snap  tests__state_machine-nofmt.snap  tests__tailcall-fmt.snap  tests__tailcall-nofmt.snap
logos-codegen/: Cargo.toml  build.rs
logos-codegen/src/: error.rs  graph.rs  leaf.rs  lib.rs  macros.rs  mir.rs  parse.rs  pattern.rs  util.rs
logos-codegen/src/generator/: context.rs  fast_loop.rs  fork.rs  leaf.rs  mod.rs  rope.rs  tables.rs
logos-codegen/src/graph/: dfa_util.rs  dot.rs  export.rs  fork.rs  impls.rs  meta.rs  mod.rs  range.rs  regex.rs
logos-codegen/src/graph/snapshots/: logos_codegen__graph__export__tests__fork-2.snap  logos_codegen__graph__export__tests__fork.snap  logos_codegen__graph__export__tests__rope-2.snap  logos_codegen__graph__export__tests__rope.snap  logos_codegen__graph__export__tests__rope_with_miss_any-2.snap  logos_codegen__graph__export__tests__rope_with_miss_any.snap  logos_codegen__graph__export__tests__rope_with_miss_first-2.snap  logos_codegen__graph__export__tests__rope_with_miss_first.snap
logos-codegen/src/parser/: definition.rs  error_type.rs  ignore_flags.rs  mod.rs  nested.rs  skip.rs  subpattern.rs  type_params.rs
logos-codegen/tests/: codegen.rs  export.rs
logos-codegen/tests/data/codegen/: explicit_lifetime0.rs  explicit_lifetime1.rs  explicit_lifetime_not_found.rs  illegal_utf8.rs  multiple_lifetime_failure.rs  no_error_lut.rs  prio_conflict.rs  simple.rs
logos-codegen/tests/data/no_error_lut/: input.rs  output.rs
logos-codegen/tests/data/simple/: output.rs
logos-codegen/tests/data/skip_callback/: input.rs  output-pre_1_82.rs  output.rs
logos-codegen/tests/data/skip_callback_failure/: input.rs  output-pre_1_82.rs
logos-codegen/tests/snapshots/: codegen__error_callback0-1_82.snap  codegen__error_callback0-pre_1_82.snap  codegen__error_callback0-state_machine-1_82.snap  codegen__error_callback0-state_machine-pre_1_82.snap  codegen__error_callback0-state_machine.snap  codegen__error_callback0-tailcall-1_82.snap  codegen__error_callback0-tailcall-pre_1_82.snap  codegen__error_callback0-tailcall.snap  codegen__error_callback1-1_82.snap  codegen__error_callback1-state_machine-1_82.snap  codegen__error_callback1-state_machine-pre_1_82.snap  codegen__error_callback1-state_machine.snap  codegen__error_callback1-tailcall-1_82.snap  codegen__error_callback1-tailcall-pre_1_82.snap  codegen__error_callback1-tailcall.snap  codegen__error_callback_failure-1_82.snap  codegen__error_callback_failure-pre_1_82.snap  codegen__error_callback_failure-state_machine-pre_1_82.snap  codegen__error_callback_failure-state_machine.snap  codegen__error_callback_failure-tailcall-pre_1_82.snap  codegen__error_callback_failure-tailcall.snap  codegen__explicit_lifetime0-state_machine.snap  codegen__explicit_lifetime0-tailcall.snap  codegen__explicit_lifetime1-state_machine.snap  codegen__explicit_lifetime1-tailcall.snap  codegen__explicit_lifetime_not_found-state_machine.snap  codegen__explicit_lifetime_not_found-tailcall.snap  codegen__illegal_utf8-state_machine.snap  codegen__illegal_utf8-tailcall-1_82.snap  codegen__illegal_utf8-tailcall.snap  codegen__multiple_lifetime_failure-state_machine.snap  codegen__multiple_lifetime_failure-tailcall.snap  codegen__no_error_lut-1_82.snap  codegen__no_error_lut-pre_1_82.snap  codegen__no_error_lut-state_machine-1_82.snap  codegen__no_error_lut-state_machine-pre_1_82.snap  codegen__no_error_lut-state_machine.snap  codegen__no_error_lut-tailcall-1_82.snap  codegen__no_error_lut-tailcall-pre_1_82.snap  codegen__no_error_lut-tailcall.snap  (+32 more)
logos-derive/: Cargo.toml
logos-derive/src/: _old_tree.rs  attr_parser.rs  error.rs  generator.rs  handlers.rs  leaf.rs  lib.rs  mir.rs  parser.rs  parsers.rs  regex.rs  token.rs  tree.rs  type_params.rs  util.rs
logos-derive/src/generator/: context.rs  fork.rs  leaf.rs  mod.rs  rope.rs  tables.rs
logos-derive/src/graph/: fork.rs  impls.rs  meta.rs  mod.rs  pattern.rs  range.rs  regex.rs  rope.rs
logos-derive/src/parser/: definition.rs  ignore_flags.rs  mod.rs  nested.rs  subpattern.rs  type_params.rs
logos-derive/src/regex/: pattern.rs
logos-derive/src/tree/: branch.rs  fork.rs  leaf.rs  node.rs
logos/benches/: bench.rs
logos/examples/: brainfuck.rs  custom_error.rs  example.json  extras.rs  hello_world.bf  json.rs
logos/src/: internal.rs  lexer.rs  lib.rs  source.rs
logos/tests/: lib.rs
tests/: Cargo.toml
tests/benches/: bench.rs  pestbench.pest
tests/src/: binary.rs  binary.rs_  lib.rs  main.rs
tests/tests/: advanced.rs  binary.rs  callbacks.rs  clone.rs  crate_.rs  crunch.rs  css.rs  custom_error.rs  data.rs  derive.rs  dev.rs  edgecase.rs  explicit_lifetime.rs  ignore_case.rs  issue-160.rs  issue-265.rs  issue-279.rs  issue_265.rs  lexer_modes.rs  lib.rs  nostd.rs  old_logos_bugs.rs  overlap.rs  partial.rs  php_tag.rs  prefix.rs  properties.rs  repeat_symbols.rs  repeat_wordchars.rs  rust.rs  simple.rs  source.rs  string.rs  sublexer.rs  trivia.rs  unicode_dot.rs  whitespace.rs
tests/tests/ui/err/: greedy-without-config.rs  greedy-without-config.stderr  lifetime-not-found.rs  lifetime-not-found.stderr  multiple-export-dirs.rs  multiple-export-dirs.stderr  multiple-lifetimes-without-attribute.rs  multiple-lifetimes-without-attribute.stderr  priority-conflict.rs  priority-conflict.stderr  regex-non-utf8.rs  regex-non-utf8.stderr  subpattern-match-empty.rs  subpattern-match-empty.stderr  token-non-utf8.rs  token-non-utf8.stderr
tests/tests/ui/ok/: greedy.rs
(+64 files in other folders)
