[[bin]]
bench = false
name = "logos-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["derive"]}
fs-err = "2.7.0"
logos-codegen2 = {version = "0.13.0", path = "../logos-codegen"}
proc-macro2 = "1.0.39"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"

[package]
name = "logos-cli2"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
