[dependencies]
beef = "0.5.0"
fnv = "1.0.6"
lazy_static = "1.4.0"
proc-macro2 = "1.0.9"
quote = "1.0.3"
proc-macro2 = "1.0.9"
regex-syntax = "0.6"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[lib]
name = "logos_codegen"

[package]
name = "logos-codegen2"
authors.workspace = true
categories.categories = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
