[dependencies]
logos-codegen2 = {version = "0.13.0", path = "../logos-codegen"}

[lib]
bench = false
name = "logos_derive"
proc-macro = true

[package]
name = "logos-derive2"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
