[dependencies]
logos-codegen = {version = "0.15.1", path = "../logos-codegen"}

[features]
# Enables debug messages
debug = ["logos-codegen/debug"]
# Don't use or generate unsafe code
forbid_unsafe = ["logos-codegen/forbid_unsafe"]
# Use the state machine codegen instead of the tailcall codegen
state_machine_codegen = ["logos-codegen/state_machine_codegen"]

[lib]
bench = false
proc-macro = true

[package]
name = "logos-derive"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.release]
shared-version = true
