[package]
edition.workspace = true
name = "tests"
publish = false
rust-version.workspace = true
version = "0.0.0"

[dependencies]
logos-derive = {path = "../logos-derive"}
logos = {path = "../", default-features = false, features = ["std"]}

[features]
forbid_unsafe = [
    "logos-derive/forbid_unsafe",
    "logos/forbid_unsafe"
]
debug = [
    "logos-derive/debug",
    "logos/debug"
]
state_machine_codegen = [
    "logos-derive/state_machine_codegen",
    "logos/state_machine_codegen"
]

[dev-dependencies]
criterion = { version = "2.10.1", package = "codspeed-criterion-compat" }

[package.metadata.release]
release = false

[[bench]]
harness = false
name = "bench"
