[package]
edition.workspace = true
name = "tests"
publish = false
rust-version.workspace = true
version = "0.0.0"

[dependencies]
logos = { path = ".." }

[features]
forbid_unsafe = [
    "logos/forbid_unsafe"
]
debug = [
    "logos/debug"
]
state_machine_codegen = [
    "logos/state_machine_codegen"
]

[dev-dependencies]
trybuild = { version = "1.0.114" }

[package.metadata.release]
release = false
